@@ -19,12 +19,11 @@ import uk.gov.justice.laa.crime.enums.MagCourtOutcome;
 import uk.gov.justice.laa.crime.exception.ValidationException;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Stream;
 
-import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
-import static org.assertj.core.api.AssertionsForClassTypes.assertThatThrownBy;
-import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
+import static org.assertj.core.api.AssertionsForClassTypes.*;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.when;
@@ -32,11 +31,12 @@ import static org.mockito.Mockito.when;
 @ExtendWith(MockitoExtension.class)
 class CrownCourtDetailsValidatorTest {
 
+    @Mock
+    private MaatCourtDataService maatCourtDataService;
+
     @InjectMocks
     private CrownCourtDetailsValidator crownCourtDetailsValidator;
 
-    @Mock
-    private MaatCourtDataService maatCourtDataService;
 
     @Test
     void givenACrownCourtIsEmpty_whenCheckCCDetailsIsInvoked_thenValidationPass() {
@@ -77,25 +77,44 @@ class CrownCourtDetailsValidatorTest {
     }
 
     @Test
-    void givenACrownCourtImprisonedIsNullAndConvicted_whenCheckCCDetailsIsInvoked_thenValidationFails() {
+    void givenACrownCourtOutcomeAndImprisonedIsTrue_whenCheckCCDetailsIsInvoked_thenValidationPass() {
         CrownCourtDTO crownCourtDTO = TestModelDataBuilder.getCrownCourtDTO();
         List<ApiCrownCourtOutcome> apiCrownCourtOutcomes = crownCourtDTO.getCrownCourtSummary().getCrownCourtOutcome();
-        apiCrownCourtOutcomes.get(0).withOutcome(CrownCourtOutcome.CONVICTED);
-        apiCrownCourtOutcomes.get(0).setDateSet(null);
         crownCourtDTO.setIsImprisoned(null);
-        assertThatThrownBy(() -> crownCourtDetailsValidator.checkCCDetails(crownCourtDTO)).isInstanceOf(ValidationException.class).hasMessageContaining("Check Crown Court Details-Imprisoned value must be entered " +
-                "for Crown Court Outcome of");
+        apiCrownCourtOutcomes.get(0).withOutcome(CrownCourtOutcome.CONVICTED);
+        assertThat(crownCourtDetailsValidator.checkCCDetails(crownCourtDTO)).isEmpty();
     }
 
     @ParameterizedTest
-    @MethodSource("validateCCOutcomeDetails")
-    void givenCCOutcomeIsNotNullAndMagsCourtOutComeIsNull_whenCheckCCDetailsIsInvoked_thenValidationFails(
-            final CrownCourtDTO crownCourtDTO,
-            final List<RepOrderCCOutcomeDTO> repOrderCCOutcomeDTOList) {
-        when(maatCourtDataService.getRepOrderCCOutcomeByRepId(any(), any())).thenReturn(repOrderCCOutcomeDTOList);
-        ValidationException validationException = assertThrows(ValidationException.class,
-                () -> crownCourtDetailsValidator.checkCCDetails(crownCourtDTO));
-        assertThat(validationException.getMessage()).isEqualTo("Cannot have Crown Court outcome without Mags Court outcome");
+    @MethodSource("crownCourtOutcomeParameters")
+    void givenACrownCourtImprisonedIsNullAndConvicted_whenCheckCCDetailsIsInvoked_thenValidationFails(
+            CrownCourtOutcome outcome) {
+
+        CrownCourtDTO crownCourtDTO = TestModelDataBuilder.getCrownCourtDTO();
+        List<ApiCrownCourtOutcome> apiCrownCourtOutcomes = crownCourtDTO.getCrownCourtSummary().getCrownCourtOutcome();
+        apiCrownCourtOutcomes.get(0).withOutcome(outcome);
+        apiCrownCourtOutcomes.get(0).setDateSet(null);
+        crownCourtDTO.setIsImprisoned(null);
+        assertThatThrownBy(() -> crownCourtDetailsValidator.checkCCDetails(crownCourtDTO))
+                .isInstanceOf(ValidationException.class)
+                .hasMessageContaining("Check Crown Court Details-Imprisoned value must be entered " +
+                                              "for Crown Court Outcome of");
+    }
+
+    @Test
+    void givenCCOutcomeIsNotNullAndMagsCourtOutComeIsNull_whenCheckCCDetailsIsInvoked_thenValidationFails() {
+        CrownCourtDTO crownCourtDTO =
+                TestModelDataBuilder.getCrownCourtDTO(CaseType.SUMMARY_ONLY, null);
+        List<RepOrderCCOutcomeDTO> repOrderCCOutcomeDTOList = TestModelDataBuilder.getRepOrderCCOutcomeDTOList();
+
+        when(maatCourtDataService.getRepOrderCCOutcomeByRepId(any()))
+                .thenReturn(repOrderCCOutcomeDTOList);
+
+        ValidationException validationException =
+                assertThrows(ValidationException.class, () -> crownCourtDetailsValidator.checkCCDetails(crownCourtDTO)
+                );
+        assertThat(validationException.getMessage())
+                .isEqualTo("Cannot have Crown Court outcome without Mags Court outcome");
 
     }
 
@@ -104,58 +123,39 @@ class CrownCourtDetailsValidatorTest {
     void givenValidCCDetails_whenCheckCCDetailsIsInvoked_thenValidationPass(
             final CrownCourtDTO crownCourtDTO,
             final List<RepOrderCCOutcomeDTO> repOrderCCOutcomeDTOList) {
-        when(maatCourtDataService.getRepOrderCCOutcomeByRepId(any(), any())).thenReturn(repOrderCCOutcomeDTOList);
-        assertDoesNotThrow(() -> crownCourtDetailsValidator.checkCCDetails(crownCourtDTO));
+
+        when(maatCourtDataService.getRepOrderCCOutcomeByRepId(any()))
+                .thenReturn(repOrderCCOutcomeDTOList);
+
+        assertThatCode(() -> crownCourtDetailsValidator.checkCCDetails(crownCourtDTO))
+                .doesNotThrowAnyException();
     }
 
-    private static Stream<Arguments> validateCCOutcomeDetails() {
+    private static Stream<Arguments> crownCourtOutcomeParameters() {
         return Stream.of(
-                Arguments.of(
-                        TestModelDataBuilder
-                                .getCrownCourtDTO(CaseType.SUMMARY_ONLY, null),
-                        TestModelDataBuilder
-                                .getRepOrderCCOutcomeDTOList()
-                )
+                Arguments.of(CrownCourtOutcome.CONVICTED),
+                Arguments.of(CrownCourtOutcome.PART_CONVICTED)
         );
     }
 
     private static Stream<Arguments> validateCCOutcomeDetailsNoException() {
         return Stream.of(
                 Arguments.of(
-                        TestModelDataBuilder
-                                .getCrownCourtDTO(CaseType.APPEAL_CC, null),
-                        List.of()
+                        TestModelDataBuilder.getCrownCourtDTO(CaseType.APPEAL_CC, null),
+                        Collections.emptyList()
                 ),
                 Arguments.of(
-                        TestModelDataBuilder
-                                .getCrownCourtDTO(CaseType.EITHER_WAY, MagCourtOutcome.APPEAL_TO_CC),
-                        TestModelDataBuilder
-                                .getRepOrderCCOutcomeDTOList()
+                        TestModelDataBuilder.getCrownCourtDTO(CaseType.EITHER_WAY, MagCourtOutcome.APPEAL_TO_CC),
+                        TestModelDataBuilder.getRepOrderCCOutcomeDTOList()
                 ),
                 Arguments.of(
-                        TestModelDataBuilder
-                                .getCrownCourtDTO(null, null),
-                        null
+                        TestModelDataBuilder.getCrownCourtDTO(null, null), null
                 ),
                 Arguments.of(
-                        TestModelDataBuilder
-                                .getCrownCourtDTO(CaseType.APPEAL_CC, null),
-                        TestModelDataBuilder
-                                .getRepOrderCCOutcomeDTOList()
+                        TestModelDataBuilder.getCrownCourtDTO(CaseType.APPEAL_CC, null),
+                        TestModelDataBuilder.getRepOrderCCOutcomeDTOList()
                 )
         );
-    }
-
-    @Test
-    void givenACrownCourtImprisonedIsNullAndPartConvicted_whenCheckCCDetailsIsInvoked_thenValidationFails() {
-        CrownCourtDTO crownCourtDTO = TestModelDataBuilder.getCrownCourtDTO();
-        List<ApiCrownCourtOutcome> apiCrownCourtOutcomes = crownCourtDTO.getCrownCourtSummary().getCrownCourtOutcome();
-        apiCrownCourtOutcomes.get(0).withOutcome(CrownCourtOutcome.PART_CONVICTED);
-        apiCrownCourtOutcomes.get(0).setDateSet(null);
-        crownCourtDTO.setIsImprisoned(null);
-        assertThatThrownBy(() -> crownCourtDetailsValidator.checkCCDetails(crownCourtDTO))
-                .isInstanceOf(ValidationException.class)
-                .hasMessageContaining("Check Crown Court Details-Imprisoned value must be entered for Crown Court Outcome of");
     }
 
     @Test
